--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,12 +3,18 @@
 <head>
    <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-   <title>CORE</title>
+   <title>SWCM</title>
+ 
+
+  <form action="/posts/search" method="get">
+    <input type="text" name="busqueda"  />
+    <input type="submit" value="Buscar" />
+  </form>
 </head>
 
 <body>
   <header>
-    <h1> COmputación en REd - CORE</h1>
+    <h1> SoftWare de CoMunicaciones - SWCM</h1>
     <nav>
       <a href="/">Home</a>
       <a href="/Posts">Posts</a>
