--- a/views/comments/index.ejs
+++ b/views/comments/index.ejs
@@ -12,7 +12,7 @@
    </header>
      
      <p>
-       <%- escapeText(comments[i].body) %>
+       <%- escapeText(comments[i].bodyC) %>
      </p>
 
      <footer>
