--- a/views/comments/orphans.ejs
+++ b/views/comments/orphans.ejs
@@ -23,7 +23,7 @@
   	    </header> 
 	     
 	    <p>
-	       <%= comments[i].body %>
+	       <%= comments[i].bodyC %>
 	    </p>
 
 	  </article>
