--- a/views/comments/show.ejs
+++ b/views/comments/show.ejs
@@ -8,7 +8,7 @@
   <%= comment.updatedAt.toLocaleDateString() %>
 </p>
 
-<p><%- escapeText(comment.body) %></p>
+<p><%- escapeText(comment.bodyC) %></p>
 
 <% if (session.user && session.user.id == comment.authorId) {%>
 
