--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,10 @@
    <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
    <title>CORE</title>
+   <form action="/posts/search" method="get">
+      <input type="text" name="busqueda"  />
+      <input type="submit" value="Buscar" />
+  </form>
 </head>
 
 <body>
@@ -15,6 +19,7 @@
            <% if (session.user) { %>
                <%= session.user.name %>
                <a href='/logout'> Logout </a> 
+               <a href='/users/<%=session.user.id%>/favourites'> Favourites </a>
            <% } else { %>
               <a href='/login?redir=/posts'> Login </a> 
               <a href='/users/new'> Register </a> 
@@ -24,6 +29,7 @@
       <a href="/">Home</a>
       <a href="/posts">Posts</a>
       <a href="/users">Usuarios</a>
+      <a href="/about">Info</a>
     </nav>
   </header>
 
