--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -2,21 +2,63 @@
 
 <article>
 
-<p>
-  <b><%= post.title %></b>
-  <br />
-  <em><%= post.author && post.author.name || 'Sin autor' %></em>
-</p>
+	<p>
 
-<p>
-  <%= post.updatedAt.toLocaleDateString() %>
-</p>
+		<b><%= post.title %></b>
 
-<p><%- escapeText(post.body) %></p>
+		<br />
+		<em><%= post.author && post.author.name || 'Sin autor' %></em>
+	</p>
 
-<% if (session.user && session.user.id == post.authorId) {%>
-  <a href="/posts/<%= post.id %>/edit"> Editar </a>
+
+<% if (session.user) { %>
+<% var esFavorito= false; %> 
+<%for (var i in post.favourites){ %>
+    
+    
+    <%if(post.favourites[i].userId==session.user.id){
+      esFavorito = true;
+    }
+
+} %>
+  <form method='post' action='/users/<%=session.user.id%>/favourites/<%=post.id%>'>
+    <% if(esFavorito){ %>
+        <input type='hidden' name='_method' value='delete'>
+        <button type="submit">
+        <img src="/images/yellowStar.png"
+
+
+      <% }else{ %>
+
+        <input type='hidden' name='_method' value='put'>
+
+        <button type="submit">
+        <img src="/images/emptyStar.png" 
+
+
+      <% } %>
+        width="72" height="46" border="0">
+      </button>
+
+
+    <%  %>
+
+  </form>
 <% } %>
+	<p>
+		<%= post.updatedAt.toLocaleDateString() %>
+	</p>
+
+	<p><%- escapeText(post.body) %></p>
+
+  <p> Comentarios: <%=comments.length%> </p>
+
+
+
+
+	<% if (session.user && session.user.id == post.authorId) {%>
+	<a href="/posts/<%= post.id %>/edit"> Editar </a>
+	<% } %>
 
 </article>
 
@@ -27,11 +69,10 @@
 <hr />
 
 <% if (session.user) { %>
-   <blockquote>
-      <%- include ../comments/new.ejs %> 
-   </blockquote>
-   <hr />
+<blockquote>
+	<%- include ../comments/new.ejs %> 
+</blockquote>
+<hr />
 <% } %>
 
 <a href="/posts"> Volver al índice de Posts</a>
-
